@@ -58,6 +58,18 @@
   }
 }
 
+\section{\Rlogo CHANGES IN R 4.4.0 patched}{
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item \code{as.numeric()}, \code{scan()}, \code{type.convert()}
+      and other places which use the internal C function \code{R_strtod} now
+      require a \emph{non-empty} digit sequence in a decimal or binary
+      exponent.  This aligns with the C standard for \code{strtod} and
+      with \code{?NumericConstants}.
+    }
+  }
+}
+
 \section{\Rlogo CHANGES IN R 4.4.0}{
   \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
     \itemize{
